--- a/test02.html
+++ b/test02.html
@@ -1,115 +1,63 @@
-&lt;!-- main --&gt;
-&lt;main&gt;
+  &lt;!-- contents --&gt;
+  &lt;main&gt;
+    &lt;div class="cursor"&gt;&lt;/div&gt;
 
-    &lt;div class="paraScroll"&gt;scrollTop() : &lt;span&gt;0&lt;/span&gt;px&lt;/div&gt;
-    &lt;!--//scroll--&gt;
-
-    &lt;nav class="paraNav"&gt;
-        &lt;ul&gt;
-            &lt;li class="active"&gt;&lt;a href="#section1"&gt;s1&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section2"&gt;s2&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section3"&gt;s3&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section4"&gt;s4&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section5"&gt;s5&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section6"&gt;s6&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section7"&gt;s7&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section8"&gt;s8&lt;/a&gt;&lt;/li&gt;
-            &lt;li&gt;&lt;a href="#section9"&gt;s9&lt;/a&gt;&lt;/li&gt;
-        &lt;/ul&gt;
-    &lt;/nav&gt;
-    &lt;!--//nav--&gt;
-
-    &lt;div class="paraCont"&gt;
-        &lt;section id="section1" class="content-item"&gt;
-            &lt;span class="num"&gt;01&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section1&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal" data-delay="500"&gt;&lt;span&gt;추구할 수 있는 용기가 있다면 우리의 모든 꿈은 이뤄질 수 있다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section1 --&gt;
-        ​
-        &lt;section id="section2" class="content-item"&gt;
-            &lt;span class="num"&gt;02&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section2&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal reveal-RTL"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal-RTL" data-delay="500"&gt;&lt;span&gt;열정을 잃지 않고 실패에서 실패로 걸어가는 것이 성공이다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section2 --&gt;
-        ​
-        &lt;section id="section3" class="content-item"&gt;
-            &lt;span class="num"&gt;03&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section3&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal reveal-TTB"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal-TTB" data-delay="500"&gt;&lt;span&gt;애벌레가 세상이 끝났다고 생각하는 순간 나비로 변했다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section3 --&gt;
-        ​
-        &lt;section id="section4" class="content-item"&gt;
-            &lt;span class="num"&gt;04&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section4&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal reveal-BTT"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal-BTT" data-delay="500"&gt;&lt;span&gt;나는 실패한 게 아니다. 나는 잘 되지 않는 방법 1만 가지를 발견한 것이다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section4 --&gt;
-        ​
-        &lt;section id="section5" class="content-item"&gt;
-            &lt;span class="num"&gt;05&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section5&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal-two" data-delay="500"&gt;&lt;span&gt;게으른 예술가가 만든 명작은 없다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section5 --&gt;
-        ​
-        &lt;section id="section6" class="content-item"&gt;
-            &lt;span class="num"&gt;06&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section6&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal reveal-two reveal-RTL"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal-two reveal-RTL" data-delay="500"&gt;&lt;span&gt;사람들이 인생에서 실패하는 가장 큰 이유는 친구, 가족, 이웃들의 말을 듣기 때문이다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section6 --&gt;
-        ​
-        &lt;section id="section7" class="content-item"&gt;
-            &lt;span class="num"&gt;07&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section7&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal reveal-two reveal-TTB"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal reveal-two reveal-BTT"  data-delay="500"&gt;&lt;span&gt;위대한 일들을 이루기 전에 스스로에게 위대한 일들을 기대해야 한다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section7 --&gt;
-        ​
-        &lt;section id="section8" class="content-item"&gt;
-            &lt;span class="num"&gt;08&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section8&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal reveal-two reveal-BTT"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal reveal-two reveal-RTL" data-delay="500"&gt;&lt;span&gt;높은 목표를 세우고, 스스로 채찍질 한다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section8 --&gt;
-        ​
-        &lt;section id="section9" class="content-item"&gt;
-            &lt;span class="num"&gt;09&lt;/span&gt;
-            &lt;h2 class="title"&gt;Section9&lt;/h2&gt;
-            &lt;figure class="img-Wrap reveal"&gt;
-                &lt;div class="img"&gt;&lt;/div&gt;
-            &lt;/figure&gt;
-            &lt;p class="desc reveal"&gt;&lt;span&gt;높은 목표를 세우고, 스스로 채찍질 한다.&lt;/span&gt;&lt;/p&gt;
-        &lt;/section&gt;
-        &lt;!-- //section9 --&gt;
+    &lt;div class="contents"&gt;
+        &lt;div class="moveImg"&gt;
+            &lt;div class="textWrap"&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanSlow"&gt;Do not try to be original&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanSlow"&gt;Do not try to be original&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanFast"&gt;Just try to be good&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanFast"&gt;Just try to be good&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanSlow"&gt;독특한 사람이 되려 하지 말아라&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanSlow"&gt;독특한 사람이 되려 하지 말아라&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+                &lt;div class="line"&gt;
+                    &lt;div class="left"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanFast"&gt;좋은 사람이 되도록 해라.&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                    &lt;div class="right"&gt;
+                        &lt;div class="spanWrap"&gt;
+                            &lt;span class="spanFast"&gt;좋은 사람이 되도록 해라.&lt;/span&gt;
+                        &lt;/div&gt;
+                    &lt;/div&gt;
+                &lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class="imgWrap"&gt;
+                &lt;img src="../assets/img/bg12@2.jpg" alt="이미지"&gt;
+            &lt;/div&gt;
+        &lt;/div&gt;
     &lt;/div&gt;
-    &lt;!-- //contents --&gt;
 &lt;/main&gt;
-&lt;!-- //main --&gt;
+&lt;!-- contents --&gt;
