--- a/refer-effect/mouseEffect/jqueryME05.html
+++ b/refer-effect/mouseEffect/jqueryME05.html
@@ -95,6 +95,9 @@
             <li><a href="javascriptME03.html">3</a></li>
             <li><a href="javascriptME04.html">4</a></li>
             <li><a href="javascriptME05.html">5</a></li>
+            <li><a href="javascriptME06.html">6</a></li>
+            <li><a href="javascriptME07.html">7</a></li>
+            <li><a href="javascriptME08.html">8</a></li>
         </ul>
         <ul>
             <li><a href="jqueryME01.html">1</a></li>
@@ -102,6 +105,9 @@
             <li><a href="jqueryME03.html">3</a></li>
             <li><a href="jqueryME04.html">4</a></li>
             <li class="active"><a href="jqueryME05.html">5</a></li>
+            <li><a href="jqueryME06.html">6</a></li>
+            <li><a href="jqueryME07.html">7</a></li>
+            <li><a href="jqueryME08.html">8</a></li>
         </ul>
     </div>
     ​
@@ -147,148 +153,89 @@
 &lt;main&gt;
     &lt;div class="cursor"&gt;&lt;/div&gt;
 
-    &lt;article class="mouseCont"&gt;
-        &lt;p&gt;&lt;em&gt;Love&lt;/em&gt; asks me no questions, and gives me endless support.&lt;/p&gt;
-        &lt;h2&gt;&lt;em&gt;사랑은&lt;/em&gt; 내게 질문하지 않으며, 다만 끝없는 지지를 준다.&lt;/h2&gt;
-    &lt;/article&gt;
+    &lt;div class="moveWrap"&gt;
+        &lt;article class="moveImage"&gt;
+            &lt;div class="mImg"&gt;&lt;img src="../assets/img/bg9.jpg" alt="이미지"&gt;&lt;/div&gt;
+            &lt;div class="mText"&gt;
+                &lt;p&gt;It is kind of fun to do the impossible.&lt;/p&gt;
+                &lt;p&gt;불가능을 하는 것은 좀 재미있다&lt;/p&gt;
+            &lt;/div&gt;
+        &lt;/article&gt;
+    &lt;/div&gt;
 &lt;/main&gt;
 &lt;!-- contents --&gt;
-
-
-
-&lt;!-- info --&gt;
-&lt;div class="info"&gt;
-    &lt;h1&gt;&lt;a href="index.html"&gt;Javascript Mouse Effect03&lt;/a&gt;&lt;/h1&gt;
-    &lt;p&gt;마우스 이펙트 - 브랜딩 이펙트&lt;/p&gt;
-&lt;/div&gt;
-​
-&lt;div class="info right"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;a href="javascriptME01.html"&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME02.html"&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li class="active"&gt;&lt;a href="javascriptME03.html"&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME04.html"&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="javascriptME05.html"&gt;5&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-    &lt;ul&gt;
-        &lt;li&gt;&lt;a href="jqueryME01.html"&gt;1&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME02.html"&gt;2&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME03.html"&gt;3&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME04.html"&gt;4&lt;/a&gt;&lt;/li&gt;
-        &lt;li&gt;&lt;a href="jqueryME05.html"&gt;5&lt;/a&gt;&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;
-​
-&lt;div class="info left list"&gt;
-    &lt;ul&gt;
-        &lt;li&gt;multiply&lt;/li&gt;
-        &lt;li&gt;screen&lt;/li&gt;
-        &lt;li&gt;overlay&lt;/li&gt;
-        &lt;li&gt;darken&lt;/li&gt;
-        &lt;li&gt;lighten&lt;/li&gt;
-        &lt;li&gt;color-dodge&lt;/li&gt;
-        &lt;li&gt;color-burn&lt;/li&gt;
-        &lt;li&gt;hard-light&lt;/li&gt;
-        &lt;li&gt;soft-light&lt;/li&gt;
-        &lt;li class="active"&gt;difference&lt;/li&gt;
-        &lt;li&gt;exclusion&lt;/li&gt;
-        &lt;li&gt;hue&lt;/li&gt;
-        &lt;li&gt;saturation&lt;/li&gt;
-        &lt;li&gt;color&lt;/li&gt;
-        &lt;li&gt;luminosity&lt;/li&gt;
-    &lt;/ul&gt;
-&lt;/div&gt;
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-css">.bg::before {
-    content: "";
-    left: 0;
-    top: 0;
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    background: rgba(129, 116, 116, 0.7);
-    z-index: -1;
-}
-
-
-.mouseCont {
+<pre><code class="language-css">.moveWrap {
     display: flex;
-    justify-content: center;
     align-items: center;
-    flex-direction: column;
-    color : #fff;
-    width: 100%;
-    height: 100vh;
+    justify-content: center;
+    width: 100%; height: 100vh;
+}
+.moveImage {
+    position: relative;
+}
+.moveImage .mImg {
+    width: 50vw;
+    height: 60vh;
     overflow: hidden;
-    font-family: 'NEXON Lv1 Gothic OTF';
-    cursor: none;
+    position: relative;
+    transition : transform 500ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
 }
-.mouseCont p {
-    font-size: 2.5vw;
-    line-height: 2.3;
-    font-weight: 300;
+.moveImage:hover .mImg {
+    transform: scale(1.025);
 }
-.mouseCont h2 {
-    font-size: 3vw;
-    font-weight: normal;
+.moveImage .mImg img {
+    width: 100%;
+    position: absolute;
+    left: -5%; top: -5%;
+    width: 110%;
+    height: 110%;
+    object-fit: cover;
+    transition : transform 500ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
 }
-.mouseCont span {
-    font-style: normal;
-    border-bottom : 0.2vw dashed #fffed7;
-}
-.mouseCont em {
-    font-style: normal;
-    border-bottom : 0.2vw dashed #c729a5;
-    color : #c729a5; 
+.moveImage .mText {
+    position: absolute;
+    left: 50%; top: 50%;
+    transform : translate(-50% , -50%);
+    text-align: center;
+    font-size: 1.3vw;
+    white-space: nowrap;
+    color : #fff;
+    padding: 1vw;
+    background: rgb(161, 151, 151, 0.4);
+    font-family: "NEXON Lv1 Gothic OTF";
 }
 .cursor {
     position: absolute;
-    left: 0; top: 0;
-    width: 10px;
-    height: 10px;
+    width: 20px; height: 20px;
+    background: #fff;
     border-radius: 50%;
-    z-index: 9999;
-    background-color: rgba(255,255,255,1);
+    z-index: 1000;
     user-select: none;
     pointer-events: none;
-    transition : transform 0.3s, opacity 0.2s;
-    mix-blend-mode: difference;
-}
-.cursor.active {
-    transform: scale(20);
-}
-
-.info.left.list li.active {
-    text-decoration: underline;
-    color : #c729a5;
 }
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const w = $(".cursor").width() /2;
-const h = $(".cursor").height() /2;  // 넓이 높이를 구해서 변수에 저장함
+<pre><code class="language-javascript">$(".moveImage").mousemove(function(e){
+    let pageX = e.pageX,
+        pageY = e.pageY;
+    gsap.to(".cursor" , {duration : .2, left: e.pageX -10 , top : e.pageY -10})
+
+    //1. 좌표값 가운데 정렬
+    let standardX = $(window).width()/2 -pageX;
+    let standardY = $(window).height()/2  -pageY;
+
+    //2. img x -> 마우스 값 / 20 y -> 마우스 값
+    $(".mImg img").attr({"style": "transform : translate("+standardX/20+"px, "+standardY/20 + "px)"});
 
 
-//움직임 효과
-$(window).mousemove(function(e){
-    gsap.to(".cursor", {duration:0.4 , left : e.pageX -w, top : e.pageY -h});
-});
-
-//오버 효과
-$(".mouseCont p").hover(function(){
-    $(".cursor").addClass("active")
-} , function(){
-    $(".cursor").removeClass("active")
-});
-
-
-//출력용
-$(".info.left.list li").click(function(){
-    $(".info.left.list li").removeClass();
-    $(this).addClass("active");
-    $(".cursor").css("mix-blend-mode" ,  $(this).text());
+    $(".pageX").text(pageX);
+    $(".pageY").text(pageY);
+    $(".standardX").text(standardX);
+    $(".standardY").text(standardY);
 })
 </code></pre>
                         </div>
