--- a/refer-effect/sliderEffect/javascriptSE03.html
+++ b/refer-effect/sliderEffect/javascriptSE03.html
@@ -143,7 +143,7 @@
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-css">/* slider */
+<pre><code class="language-css"> /* slider */
 .slider-wrap {
     display: flex;
     align-items: center;
@@ -163,7 +163,7 @@
 .slider-inner {
     overflow: hidden;
     position: relative;
-    width: 4000px;
+    width: 4800px;
     height: 480px;
 }
 
@@ -190,40 +190,31 @@
 </code></pre>
                         </div>
                         <div>
-<pre><code class="language-javascript">const sliderWrap = $(".slider-wrap");
-const sliderImg = $(".slider-img");
-const sliderInner = $(".slider-inner");
-const slider = $(".slider");
+<pre><code class="language-javascript">const sliderWrap = document.querySelector(".slider-wrap");
+const sliderImg = document.querySelector(".slider-img");
+const sliderInner = document.querySelector(".slider-inner");
+const slider = document.querySelectorAll(".slider");
 
 let currentIndex = 0;
+let sliderWidth = document.querySelector(".slider").offsetWidth;
 let sliderCount = slider.length;
-let sliderWidth = slider.width();
-let sliderDuration = 600;
-let sliderEasing = "easeOutExpo";
+let sliderClone = sliderInner.firstElementChild.cloneNode(true);
+sliderInner.appendChild(sliderClone)
 
-setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
-    // sliderInner.animate({ left: "-800px" });
-    // sliderInner.animate({ left: "-1600px" });
-    // sliderInner.animate({ left: "-2400px" });
-    // sliderInner.animate({ left: "-3200px" });
-    // sliderInner.animate({ left: "-4000px" });
-    // sliderInner.animate({ left: "-0px" });
+setInterval(() => {
+    currentIndex++;
+    sliderInner.style.transition = "all 0.3s";
+    sliderInner.style.transform = "translate("+ -sliderWidth * currentIndex + "px)";
 
-    //currentIndex++;
+    if( currentIndex == sliderCount ){
+        setTimeout(() => {
+            sliderInner.style.transition = "0s";
+            sliderInner.style.transform = "translatex(0)";
+        }, 300);
+        currentIndex = 0;
+    }
 
-    // if( currentIndex &lt; 5 ) {
-    //     currentIndex++;
-    // } else {
-    //     currentIndex = 0;
-    // }
-    ( currentIndex &lt; sliderCount -1 ) ? currentIndex++ : currentIndex = 0 
-    (currentIndex &lt; sliderCount -1) ? currentIndex ++ : currentIndex = 0;
-
-    let sliderPosition = currentIndex * -sliderWidth;
-    sliderInner.animate({ left : sliderPosition }, sliderDuration , sliderEasing);
-
-    console.log(currentIndex);
-} , 3000);
+}, 3000);
 </code></pre>
                         </div>
                     </div>
@@ -234,7 +225,8 @@ setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
     </div>
     <!-- info -->
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="../assets/js/custom.js"></script>
     <script src="../assets/js/highlight.min.js"></script>
     <script>
@@ -249,18 +241,18 @@ setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
         let sliderWidth = document.querySelector(".slider").offsetWidth;
         let sliderCount = slider.length;
         let sliderClone = sliderInner.firstElementChild.cloneNode(true);
-        sliderInner.appendChild(sliderClone);
+        sliderInner.appendChild(sliderClone)
     
         setInterval(() => {
             currentIndex++;
             sliderInner.style.transition = "all 0.3s";
-            sliderInner.style.transform = "translate("+ -sliderWidth * currentIndex +" px)";
+            sliderInner.style.transform = "translate("+ -sliderWidth * currentIndex + "px)";
 
             if( currentIndex == sliderCount ){
                 setTimeout(() => {
                     sliderInner.style.transition = "0s";
                     sliderInner.style.transform = "translatex(0)";
-                } ,300);
+                }, 300);
                 currentIndex = 0;
             }
 
