--- a/site/test07.html
+++ b/site/test07.html
@@ -189,6 +189,12 @@
             font-size: 18px;
             font-weight: 600;
         }
+        #content2 .box3 .price img {
+            width: 50px; height: 50px;
+            float: right;
+            margin-top: -30px;
+        }
+
         #content2 .box4 {
             width: 30%;
             height: 300px;
@@ -205,6 +211,12 @@
             font-size: 18px;
             font-weight: 600;
         }
+        #content2 .box4 .price img {
+            width: 50px; height: 50px;
+            float: right;
+            margin-top: -30px;
+        }
+
         #content2 .box5 {
             width: 30%;
             height: 300px;
@@ -220,6 +232,11 @@
             margin-bottom: 12px;
             font-size: 18px;
             font-weight: 600;
+        }
+        #content2 .box5 .price img {
+            width: 50px; height: 50px;
+            float: right;
+            margin-top: -30px;
         }
 
     
@@ -253,8 +270,12 @@
         }
         .footer2 .low .low-low .low2 {
             margin-bottom: 10px;
+            display: block;
         }
-        .footer2 .low .low-low .low3 {}
+        .footer2 .low .low-low .low3 {
+            display: block;
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body>
@@ -294,7 +315,7 @@
                         <h3>7월 30일(화)에 받을수 있어요</h3>
                         <p>오전7시까지 주문하시면 다음날 배송됩니다.</p>
                         <span>63:28:32 <em>남은시간</em></span>
-                        <img src="img/ggggg.jpg" alt="dfa">
+                        <img src="img/truck.jpg" alt="dfa">
                     </div>
                 </div>
             </div>
@@ -304,17 +325,17 @@
                     <div class="box3">
                         <img src="img/best01.jpg" alt="">
                         <p>영양식 어묵 쟁반</p>
-                        <span>33,800 / 3인분</span>
+                        <span class="price">33,800 / 3인분 <img src="img/shop.jpg" alt=""></span>
                     </div>
                     <div class="box4">
                         <img src="img/best02.jpg" alt="">
                         <p>새우 쭈꾸미 삼겹살</p>
-                        <span>29,800 / 3인분</span>
+                        <span class="price">29,800 / 3인분 <img src="img/shop.jpg" alt=""></span>
                     </div>
                     <div class="box5">
                         <img src="img/best03.jpg" alt="">
                         <p>방풍나물 아귀찜</p>
-                        <span>32,800 / 3인분</span>
+                        <span class="price">32,800 / 3인분 <img src="img/shop.jpg" alt=""></span>
                     </div>
                 </div>
             </div>
@@ -333,8 +354,8 @@
                     <div class="low">
                         <span class="low1">이용약관 | 개인정보처리 방침 | 법적고지 | 사업자정보 확인</span>
                         <div class="low-low">
-                            <span class="low2">씨제이제일제당(주) | 대표자 신현재</span><br>
-                            <span class="low3">주소:서울 중구 동호로 330CJ제일제당 센터(우)04560 | 사업자등록번호:104-860953</span><br>
+                            <span class="low2">씨제이제일제당(주) | 대표자 신현재</span>
+                            <span class="low3">주소:서울 중구 동호로 330CJ제일제당 센터(우)04560 | 사업자등록번호:104-860953</span>
                             <span class="low4">통신판매업신고 중구 제07767호 | 개인정보보호책임자:류화정</span>
                         </div>
                     </div>
