--- a/refer-effect/sliderEffect/jquerySE04.html
+++ b/refer-effect/sliderEffect/jquerySE04.html
@@ -267,6 +267,8 @@ setInterval(function(){   //3초에 한번씩 왼쪽으로 이동
 
         }, 2000);
 
+
+        // sample2
         const sliderImg = $(".slider-img2");
         const sliderInner = $(".slider-inner2");
         const slider = $(".slider.slider2");
