--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                     <span class="overlay-text-thumb1-donut">클래스</span>
                                     <span class="overlay-text-thumb2-donut">CLASS</span>
                                 </div>
-                                <img src="assets/img/svg-donut.svg" alt="portfolio">
+                                <img src="assets/img/svg-apple.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>CLASS</h5>
                                     <p>클래스</p>
@@ -206,7 +206,7 @@
                                     <span class="overlay-text-thumb1-donut">자바스크립트</span>
                                     <span class="overlay-text-thumb2-donut">JAVASCRIPT</span>
                                 </div>
-                                <img src="assets/img/svg-strawberry-magnum.svg" alt="portfolio">
+                                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>JAVASCRIPT</h5>
                                     <p>자바스크립트</p>
@@ -227,7 +227,7 @@
                                     <span class="overlay-text-thumb1-donut">제이쿼리</span>
                                     <span class="overlay-text-thumb2-donut">JQUERY</span>
                                 </div>
-                                <img src="assets/img/svg-vanilla-cupcake.svg" alt="portfolio">
+                                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>JQUERY</h5>
                                     <p>제이쿼리</p>
@@ -248,7 +248,7 @@
                                     <span class="overlay-text-thumb1-donut">레이아웃</span>
                                     <span class="overlay-text-thumb2-donut">LAYOUT</span>
                                 </div>
-                                <img src="assets/img/svg-cookie.svg" alt="portfolio">
+                                <img src="assets/img/svg-carrot.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>LAYOUT</h5>
                                     <p>레이아웃</p>
@@ -269,7 +269,7 @@
                                     <span class="overlay-text-thumb1-donut">레퍼런스</span>
                                     <span class="overlay-text-thumb2-donut">HTML</span>
                                 </div>
-                                <img src="assets/img/svg-lemon.svg" alt="portfolio">
+                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>HTML</h5>
                                     <p>레퍼런스</p>
@@ -290,7 +290,7 @@
                                     <span class="overlay-text-thumb1-donut">레퍼런스</span>
                                     <span class="overlay-text-thumb2-donut">CSS</span>
                                 </div>
-                                <img src="assets/img/svg-macaron-cookies.svg" alt="portfolio">
+                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>CSS</h5>
                                     <p>레퍼런스</p>
@@ -311,7 +311,7 @@
                                     <span class="overlay-text-thumb1-donut">사이트 제작</span>
                                     <span class="overlay-text-thumb2-donut">SITE</span>
                                 </div>
-                                <img src="assets/img/svg-bread-egg.svg" alt="portfolio">
+                                <img src="assets/img/svg-donut.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>SITE</h5>
                                     <p>사이트 제작</p>
@@ -333,32 +333,11 @@
                                     <span class="overlay-text-thumb1-donut">데이터 베이스</span>
                                     <span class="overlay-text-thumb2-donut">mysql</span>
                                 </div>
-                                <img src="assets/img/svg-cheeseburger.svg" alt="portfolio">
+                                <img src="assets/img/svg-french-fries.svg" alt="portfolio">
                                 <div class="img-text donutImg">
                                     <h5>mysql</h5>
                                     <p>데이터 베이스</p>
                                     <span>mysql</span>
-                                </div>
-                            </div>
-                        </a>
-                    </section>
-                    <!-- //box -->
-
-                      <!-- box -->
-                      <section class="color-shape reference">
-                        <a href="refer-effect/index.html" target="_blank">
-                            <div class="image-wrap">
-                                <div class="hover-wrap">
-                                    <span class="overlay-img-donut">EFFECT</span>
-                                    <span class="overlay-text-thumb-donut">이펙트</span>
-                                    <span class="overlay-text-thumb1-donut">이펙트</span>
-                                    <span class="overlay-text-thumb2-donut">EFFECT</span>
-                                </div>
-                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
-                                <div class="img-text donutImg">
-                                    <h5>EFFECT</h5>
-                                    <p>이펙트</p>
-                                    <span>EFFECT</span>
                                 </div>
                             </div>
                         </a>
@@ -370,16 +349,16 @@
                         <a href="refer-effect/parallaxEffect/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
-                                    <span class="overlay-img-donut">PARALLAX</span>
-                                    <span class="overlay-text-thumb-donut">패럴랙스</span>
-                                    <span class="overlay-text-thumb1-donut">패럴랙스</span>
-                                    <span class="overlay-text-thumb2-donut">PARALLAX</span>
+                                    <span class="overlay-img-donut">PARALLAX EFFECT</span>
+                                    <span class="overlay-text-thumb-donut">패럴랙스 이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">패럴랙스 이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">PARALLAX EFFECT</span>
                                 </div>
                                 <img src="assets/img/svg-cherries.svg" alt="portfolio">
                                 <div class="img-text donutImg">
-                                    <h5>PARALLAX</h5>
-                                    <p>패럴랙스</p>
-                                    <span>PARALLAX</span>
+                                    <h5>PARALLAX EFFECT</h5>
+                                    <p>패럴랙스 이펙트</p>
+                                    <span>PARALLAX EFFECT</span>
                                 </div>
                             </div>
                         </a>
@@ -401,6 +380,69 @@
                                     <h5>MOUSE EFFECT</h5>
                                     <p>마우스 이펙트</p>
                                     <span>MOUSE EFFECT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                      <!-- box -->
+                      <section class="color-shape reference">
+                        <a href="refer-effect/menuEffect/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">MENU EFFECT</span>
+                                    <span class="overlay-text-thumb-donut">메뉴 이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">메뉴 이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">MENU EFFECT</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>MENU EFFECT</h5>
+                                    <p>메뉴 이펙트</p>
+                                    <span>MENU EFFECT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                      <!-- box -->
+                      <section class="color-shape reference">
+                        <a href="refer-effect/gameEffect/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">GAME EFFECT</span>
+                                    <span class="overlay-text-thumb-donut">게임 이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">게임 이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">GAME EFFECT</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>GAME EFFECT</h5>
+                                    <p>게임 이펙트</p>
+                                    <span>GAME EFFECT</span>
+                                </div>
+                            </div>
+                        </a>
+                    </section>
+                    <!-- //box -->
+
+                     <!-- box -->
+                     <section class="color-shape reference">
+                        <a href="refer-effect/sliderEffect/index.html" target="_blank">
+                            <div class="image-wrap">
+                                <div class="hover-wrap">
+                                    <span class="overlay-img-donut">SLIDER EFFECT</span>
+                                    <span class="overlay-text-thumb-donut">슬라이드 이펙트</span>
+                                    <span class="overlay-text-thumb1-donut">슬라이드 이펙트</span>
+                                    <span class="overlay-text-thumb2-donut">SLIDER EFFECT</span>
+                                </div>
+                                <img src="assets/img/svg-cherries.svg" alt="portfolio">
+                                <div class="img-text donutImg">
+                                    <h5>SLIDER EFFECT</h5>
+                                    <p>슬라이드 이펙트</p>
+                                    <span>SLIDER EFFECT</span>
                                 </div>
                             </div>
                         </a>
