--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
                      <!-- box -->
                      <section class="color-shape reference">
-                        <a href="megabox/index15.html" target="_blank">
+                        <a href="megabox/index.html" target="_blank">
                             <div class="image-wrap">
                                 <div class="hover-wrap">
                                     <span class="overlay-img-donut">MEGABOX</span>
@@ -676,7 +676,7 @@
             <div class="row">
                 <div class="span12">
                     <h5>
-                        <a href="http://webstoryboy.co.kr" target="_blank">Webstoryboy</a>
+                        <a href="#" target="_blank">Wooseok</a>
                         <span id="clock"></span>
                         <span id="infor"></span>
                     </h5>
