--- a/site-react/main.html
+++ b/site-react/main.html
@@ -60,15 +60,23 @@
                 <li><a href="script.html">Script</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
-            <a href="#" class="ham">
-                <span class="sr-only">menu</span>
-            </a>
+        </div>
+        <div class="header__ham">
+            <span class="sr-only">menu</span>
         </div>
     </header>
     <!-- //header -->
 
     <main id="main">
-
+        <section id="mainCont">
+            <h2 class="sr-only">메인 컨텐츠 입니다.</h2>
+            <div class="main__cont">
+                <div>we provide</div>
+                <div>visual coding</div>
+                <div>solutions</div>
+                <div>for you webs</div>
+            </div>
+        </section>
     </main>
     <!-- //main -->
     
