--- a/site-react/about.html
+++ b/site-react/about.html
@@ -91,7 +91,7 @@
             </div>
         </div>
     </main>
-    <footer>
+    <div class="start">
         <div class="footcon">
             <div class="new">Let’s create something new</div>
             <div class="get">LET`S Get IN</div>
@@ -100,7 +100,7 @@
                 <a href="#">Contact Us</a>
             </div>
         </div>
-    </footer>
+    </div>
     <!-- //main -->
     
     <!-- <footer id="footer">
