--- a/site-react/about.html
+++ b/site-react/about.html
@@ -11,7 +11,7 @@
     <meta name="description" content="리액트 포트폴리오 사이트입니다. "/>
     <meta name="keywords" content="리액트, 포트폴리오, 웹표준, 웹접근성, 사이트만들기, 포트폴리오, 웹스토리보이" />
     <meta name="robots" content="all" />
-
+ 
     <!-- facebook -->
     <meta property="og:url" content="/" />
     <meta property="og:type" content="website" />
@@ -67,7 +67,7 @@
     </header>
     <!-- //header -->
 
-    <main id="main">
+    <div id="about">
         <div class="container">
             <h2>ABOUT<br> ME</h2>
             <div class="aboutImg"></div>
@@ -90,7 +90,7 @@
                 <div class="box4"></div>
             </div>
         </div>
-    </main>
+    </div>
     <div class="start">
         <div class="footcon">
             <div class="new">Let’s create something new</div>
