--- a/sleepData.html
+++ b/sleepData.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="graph">
                     <div class="chart">
-                        <canvas id="myChart1" width="400" height="50vh"></canvas>
+                        <canvas id="myChart1" width="400" height="200"></canvas>
                         <!-- <canvas id="myChart2" width="400" height="200"></canvas>
                         <canvas id="myChart3" width="400" height="200"></canvas> -->
                     </div>
